--- a/PitchPerfeito/Base.lproj/Main.storyboard
+++ b/PitchPerfeito/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6221" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CEn-ie-k7n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CEn-ie-k7n">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -125,12 +125,6 @@
                                     <action selector="playSnail:" destination="gld-mu-58R" eventType="touchUpInside" id="e3K-yg-t50"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzM-wx-bMj" customClass="stopSoundButton">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" image="stopSoundButton">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBf-fe-YxM">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" image="chipmunk">
@@ -164,6 +158,15 @@
                                     <action selector="playDarthVaderAudio:" destination="gld-mu-58R" eventType="touchUpInside" id="57H-Rr-xJS"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzM-wx-bMj">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stopSoundButton">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopAudio:" destination="gld-mu-58R" eventType="touchUpInside" id="oUS-bl-HKM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -190,9 +193,9 @@
                             <mask key="subviews">
                                 <exclude reference="9SH-z2-aAF"/>
                                 <exclude reference="E0i-Ke-zz1"/>
-                                <exclude reference="fzM-wx-bMj"/>
                                 <exclude reference="DBf-fe-YxM"/>
                                 <exclude reference="eq7-Ox-UaN"/>
+                                <exclude reference="fzM-wx-bMj"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="jo2-aU-vs9"/>
@@ -211,9 +214,9 @@
                             <mask key="subviews">
                                 <include reference="9SH-z2-aAF"/>
                                 <include reference="E0i-Ke-zz1"/>
-                                <include reference="fzM-wx-bMj"/>
                                 <include reference="DBf-fe-YxM"/>
                                 <include reference="eq7-Ox-UaN"/>
+                                <include reference="fzM-wx-bMj"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="jo2-aU-vs9"/>
