--- a/PitchPerfeito/Base.lproj/Main.storyboard
+++ b/PitchPerfeito/Base.lproj/Main.storyboard
@@ -113,6 +113,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="playFastAudio:" destination="gld-mu-58R" eventType="touchUpInside" id="e5Q-F5-96i"/>
                                     <action selector="playRabbit:" destination="gld-mu-58R" eventType="touchUpInside" id="59f-G0-y8w"/>
                                 </connections>
                             </button>
@@ -122,6 +123,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="playSlowAudio:" destination="gld-mu-58R" eventType="touchUpInside" id="W9C-JF-7Gk"/>
                                     <action selector="playSnail:" destination="gld-mu-58R" eventType="touchUpInside" id="e3K-yg-t50"/>
                                 </connections>
                             </button>
